# rovet-back-end

./: .env.example  .gitignore  BEST_PRACTICES.md  COVERAGE_REPORT.md  DATABASE_SETUP.md  DEPLOYMENT_GUIDE.md  Dockerfile  MICROSERVICE_AUTH_GUIDE.md  Makefile  README.md  TESTING_GUIDE.md  docker-compose.yml  locustfile.py  prometheus.yml  pyproject.toml  pytest.ini  test.db
.cursor/: 00-project-guidelines.mdc  01-testing-rules.mdc
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: initial_migration.py
app/: main.py
app/api/: deps.py
app/api/dependencies/: __init__.py  auth.py  database.py  services.py  validation.py
app/api/v1/: api.py
app/controllers/: auth_controller.py  user_controller.py
app/core/: config.py  docs.py  logging.py  security.py
app/db/: session.py
app/dto/: auth.py  token.py  user.py
app/exceptions/: base.py
app/middleware/: auth_middleware.py  logging_middleware.py  metrics_middleware.py  request_validation_middleware.py  security_middleware.py
app/models/: user.py
app/repositories/: base.py  interfaces.py  user_repository.py
app/schemas/: user.py
app/scripts/: seed_db.py
app/services/: auth_service.py  base.py  password_service.py  user_service.py
app/tests/: conftest.py  factories.py  test_main.py  utils.py
app/tests/e2e/: test_auth_flow_e2e.py
app/tests/integration/: test_auth_flow.py  test_user_repository.py  test_user_service_integration.py
competency-chart/: README.md  index.html
competency-chart/css/: base.css  components.css  layout.css  variables.css
competency-chart/js/: chart.js  config.js  controls.js  drag.js  main.js  storage.js
docs/: API_STRUCTURE_DIAGRAM.md  QUICK_REFERENCE.md  TESTING_GUIDE.md  TESTING_QUICK_START.md  TESTING_STRATEGY.md  TESTING_WITH_DI.md
scripts/: build_virtual_environment.py  docker-entrypoint.sh  generate_rsa_keys.py  get_coverage.py  init-test-db.sh  run_tests.sh  seed_db.sh  start.sh  test_api.sh
scripts/requirements/: requirements.txt
trend-salon/: index.html  script.js  slider-demo.html  slider.js  styles.css
(+15 files in other folders)
